# amd-vaiml-window-partition-repro

./: .gitignore  CMakeLists.txt  README.md  bootstrap.ps1  build.ps1  intel-vpux-attention-bias-compiler-failure.md  repro.py  run-python.ps1  run.ps1
amd/: compile_npu.py  vitisai_config.json
results/fakeaudio-vaiml-bf16-2026-07-13/: README.md
src/: main.cpp
